tdf#63416 Do not sort header in autofilter if user has chosen one in dialog

This patch fixes only a part of the issue. It respects the header if
chosen by the user in the autofilter dialog showing when the first row
contains empty cells or numbers. With minimal effort a lot is fixed
(80-20-rule). With headers, the autofilter sorting works with empty or
number cells in the header row. (The main part of the issue.)

What this patch does not solve: If there is no header row, but only data
rows. If the user's choice in the dialog is no header for the autofilter,
then the first row is sorted too. The autofilter buttons will move
toghether with the first row. The autofilter buttons should stay at the
first row, even if the data of the first row changes.

In conclusion, this patch improves the autofilter sorting code, though it
does not address everything of the issue.

Change-Id: I9cc56577a90586bf8575c9630e5c03871198c04c
Reviewed-on: https://gerrit.libreoffice.org/15277
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>